--- a/working_set_classads.ipynb
+++ b/working_set_classads.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "# Data collected from a spark query at CERN, in pandas pickle format\n",
     "# CRAB jobs only have data after Oct. 2017\n",
-    "ws = parquet.read_table('data/working_set_day').to_pandas()\n",
+    "ws = parquet.read_table('data/working_set_classads').to_pandas()\n",
     "# spark returns lists, we want to use sets\n",
     "ws['working_set_blocks'] = ws.apply(lambda x: FastSet(x.working_set_blocks), 'columns')"
    ]
